cleaned of names

--- a/misc/modify_vqa.ipynb
+++ b/misc/modify_vqa.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "de3af22a",
    "metadata": {},
    "outputs": [],
    "source": [
     "data_in_dir = '../example_hists/' # jsons\n",
-    "data_out_dir = '/Users/jnaiman/Downloads/tmp/JCDL2025/example_hists/modifications/' # jsons\n",
+    "data_out_dir = '~/Downloads/tmp/JCDL2025/example_hists/modifications/' # jsons\n",
     "\n",
     "verbose_qa = True\n"
    ]
