--- a/paper_plots_and_calcs.ipynb
+++ b/paper_plots_and_calcs.ipynb
@@ -859,12 +859,12 @@
     "# Adjust layout to prevent overlapping\n",
     "plt.tight_layout()\n",
     "\n",
-    "fig.savefig('/Users/jnaiman/Dropbox/Paper_JCDL2025/figures/relation_and_residuals.pdf')"
+    "fig.savefig('~/Dropbox/Paper_JCDL2025/figures/relation_and_residuals.pdf')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "e5c9e2ee",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1025,7 @@
     "# Adjust layout to prevent overlapping\n",
     "plt.tight_layout()\n",
     "\n",
-    "fig.savefig('/Users/jnaiman/Dropbox/Paper_JCDL2025/figures/relation_and_residuals.pdf')"
+    "fig.savefig('~/Dropbox/Paper_JCDL2025/figures/relation_and_residuals.pdf')"
    ]
   },
   {
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "37d6c4f9",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1516,7 @@
     "# Adjust layout to prevent overlapping\n",
     "plt.tight_layout()\n",
     "\n",
-    "fig.savefig('/Users/jnaiman/Dropbox/Paper_JCDL2025/figures/mean_ngaussians.pdf')"
+    "fig.savefig('~/Dropbox/Paper_JCDL2025/figures/mean_ngaussians.pdf')"
    ]
   },
   {
