--- a/zooniverse/parse_zooniverse_human_data.ipynb
+++ b/zooniverse/parse_zooniverse_human_data.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1fcb0795",
    "metadata": {},
    "outputs": [],
    "source": [
     "# original file from Zooniverse -- annonomized version will be made and saved in \"resources\"\n",
-    "zoonie_file = '/Users/jnaiman/Dropbox/Paper_JCDL2025/zooniverse/first-workflow-for-histograms-classifications.csv'\n",
+    "zoonie_file = '~/Dropbox/Paper_JCDL2025/zooniverse/first-workflow-for-histograms-classifications.csv'\n",
     "\n",
-    "zoonie_subjects = '/Users/jnaiman/Dropbox/Paper_JCDL2025/zooniverse/jcdl-et-al-subjects.csv'\n",
+    "zoonie_subjects = '~/Dropbox/Paper_JCDL2025/zooniverse/jcdl-et-al-subjects.csv'\n",
     "\n",
     "# where ground truth jsons are\n",
     "gt_jsons = '../example_hists/jsons/'"
