--- a/create_example_hists_complex_jcdl2025.ipynb
+++ b/create_example_hists_complex_jcdl2025.ipynb
@@ -13,7 +13,7 @@
     "# where to save the figures that are created\n",
     "#fake_figs_dir = './example_hists/' # saving in github only for small numbers\n",
     "# stop overwriting what is there\n",
-    "fake_figs_dir = '~/Downloads/tmp/JCDL2025/visual_qa_histograms/example_hists_larger/' # large dataset, same format\n",
+    "fake_figs_dir = '~/Downloads/tmp/JCDL2025/visual_qa_histograms/example_hists_complex/' # large dataset, same format\n",
     "#fake_figs_dir = '~/LLM_VQA_JCDL2025/example_hists/fewshot/' # for fewshot learning\n",
     "\n",
     "\n",
@@ -248,20 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "2d767f07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "linestyles_hist = ['-'] # only use a subset of the linestyles\n",
+    "linestyles_hist = ['-', '--', ':'] # only use a subset of the linestyles\n",
     "\n",
     "plot_params['histogram'] = plot_params['histogram'].copy()\n",
     "\n",
     "# no horizontal plots\n",
-    "plot_params['histogram']['horizontal prob'] = 0.0\n",
+    "plot_params['histogram']['horizontal prob'] = 0.25\n",
     "\n",
     "# random distributions\n",
-    "plot_params['histogram']['distribution']['random']['prob'] = 0\n",
+    "plot_params['histogram']['distribution']['random']['prob'] = 1\n",
     "\n",
     "# gaussian mixture model\n",
     "plot_params['histogram']['distribution']['gmm']['prob'] = 1\n",
@@ -282,15 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8b36fa32-a85d-4dbe-a4f5-bf0be3685094",
    "metadata": {},
    "outputs": [],
    "source": [
     "# for ease of things, lets not do equations here\n",
-    "title_params['equation']['prob'] = 0.0 # probability any word will be equation\n",
-    "xlabel_params['equation']['prob'] = 0.0 # probability any word will be equation\n",
-    "ylabel_params['equation']['prob'] = 0.0 # probability any word will be equation"
+    "title_params['equation']['prob'] = 0.25 # probability any word will be equation\n",
+    "xlabel_params['equation']['prob'] = 0.25 # probability any word will be equation\n",
+    "ylabel_params['equation']['prob'] = 0.25 # probability any word will be equation"
    ]
   },
   {
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "2751985c",
    "metadata": {},
    "outputs": [
@@ -512,7 +512,7 @@
     "# Set a seed if you want a reproducible thing\n",
     "seed_outer = np.random.randint(maxint)\n",
     "#seed_outer = 7526304181034464103\n",
-    "seed_outer = 6700012876856450103\n",
+    "#seed_outer = 6700012876856450103\n",
     "\n",
     "print('seed_outer =',seed_outer)\n",
     "rng_outer = np.random.default_rng(seed_outer)"
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "27aa8e6c",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
     "# \"Inner\" seed -- for things like distributions and whatnot\n",
     "seed = np.random.randint(maxint)\n",
     "#seed = 2870146871786070273\n",
-    "seed = 7067533564274193147\n",
+    "#seed = 7067533564274193147\n",
     "print('seed = ', seed)\n",
     "# based on seed, make random number generator, see: https://numpy.org/doc/2.2/reference/random/generator.html\n",
     "rng = np.random.default_rng(seed)\n",
