starting to port more complex

--- a/create_example_hists_complex_jcdl2025.ipynb
+++ b/create_example_hists_complex_jcdl2025.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "a384e543",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "82acb676",
    "metadata": {},
    "outputs": [],
@@ -82,6 +82,8 @@
     "\n",
     "import utils.distribution_utils\n",
     "\n",
+    "from utils.plot_qa_utils import log_scale_ax\n",
+    "\n",
     "from utils.plot_utils import markers, make_base_plot\n",
     "marker_sizes = np.arange(0,10)+1\n",
     "line_list_thick = np.arange(1,10)\n",
@@ -104,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "a78c71f0",
    "metadata": {},
    "outputs": [],
@@ -116,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "4d785d10",
    "metadata": {},
    "outputs": [],
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "b066179c",
    "metadata": {},
    "outputs": [],
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "52bbd3e2",
    "metadata": {},
    "outputs": [],
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "9f0dc2a5",
    "metadata": {},
    "outputs": [
@@ -184,9 +186,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16253 343492\n",
-      "shape of output= (5097, 5)\n",
-      "shape of output= (36332, 5)\n",
+      "16254 343520\n",
+      "shape of output= (5098, 5)\n",
+      "shape of output= (36335, 5)\n",
       "number of inlines =  33201\n"
      ]
     }
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "c1be6ee7",
    "metadata": {},
    "outputs": [],
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "5a9fe905",
    "metadata": {},
    "outputs": [],
@@ -238,6 +240,7 @@
     "# prob for getting a histogram\n",
     "plot_params['histogram']['prob'] = 1\n",
     "\n",
+    "# XYZ: since auto-setting plot_type later, can probably get away with none of the stuff in this cell\n",
     "# probability of getting a scatter plot\n",
     "plot_params['scatter']['prob'] = 0\n",
     "# probability of getting a line\n",
@@ -248,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2d767f07",
    "metadata": {},
    "outputs": [],
@@ -273,6 +276,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "ba79bd07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# choices = []; probs = []\n",
+    "# for k,v in plot_params_out.items():\n",
+    "#     choices.append(k)\n",
+    "#     probs.append(v['prob'])\n",
+    "\n",
+    "# plot_type = rng.choice(choices, p=probs)\n",
+    "# plot_type\n",
+    "plot_type = 'histogram' # fix this"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b958d73a-fd58-46b5-9af3-b91cda577b56",
    "metadata": {},
@@ -282,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8b36fa32-a85d-4dbe-a4f5-bf0be3685094",
    "metadata": {},
    "outputs": [],
@@ -303,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "a1cd495c-be76-4d40-bc74-86e5efecf417",
    "metadata": {},
    "outputs": [
@@ -335,9 +355,9 @@
       "plot_types_params['line']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
       "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
-      "plot_types_params['histogram']['distribution'] probabilities did not add to 1! total = 2\n",
+      "plot_types_params['histogram']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
-      "now:  [0.0, 0.5, 0.5]\n",
+      "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
       "plot_types_params['scatter']['distribution'] probabilities did not add to 1! total = 3\n",
       "renormalizing...\n",
       "now:  [0.3333333333333333, 0.3333333333333333, 0.3333333333333333]\n",
@@ -383,13 +403,13 @@
        "  'xmax': 10000,\n",
        "  'error bars': {'elinewidth': {'min': 1, 'max': 5},\n",
        "   'x': {'prob': 1, 'size': {'min': 0.01, 'max': 0.1}}},\n",
-       "  'horizontal prob': 0.0,\n",
-       "  'distribution': {'random': {'prob': 0.0},\n",
-       "   'linear': {'prob': 0.5,\n",
+       "  'horizontal prob': 0.25,\n",
+       "  'distribution': {'random': {'prob': 0.3333333333333333},\n",
+       "   'linear': {'prob': 0.3333333333333333,\n",
        "    'intersect': (-100, 100),\n",
        "    'slope': (-5, 5),\n",
        "    'noise': (0, 0.25)},\n",
-       "   'gmm': {'prob': 0.5,\n",
+       "   'gmm': {'prob': 0.3333333333333333,\n",
        "    'xmin': -10000,\n",
        "    'xmax': 10000,\n",
        "    'ymin': -10000,\n",
@@ -465,7 +485,7 @@
        "    'color noise prob': 0.5}}}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "2751985c",
    "metadata": {},
    "outputs": [
@@ -504,7 +524,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed_outer = 7816012122992347581\n"
+      "seed_outer = 6014646500573781913\n"
      ]
     }
    ],
@@ -520,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "27aa8e6c",
    "metadata": {},
    "outputs": [
@@ -528,7 +548,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seed =  4102584938469946518\n"
+      "seed =  5739101012828768842\n"
      ]
     }
    ],
@@ -545,29 +565,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "id": "e8cce8c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['number prob', 'layout prob', 'to even above'])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "panel_params.keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf03f9e5",
+   "metadata": {},
+   "source": [
+    "## Example auto-generated figure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "3d28ba6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color map: gist_stern\n",
+      "Plot style: default\n",
+      "Aspect ratio: 0.4673173365093409\n",
+      "DPI: 134\n"
+     ]
+    }
+   ],
    "source": [
     "# set some things to keep standard across images\n",
     "\n",
     "tight_layout = True\n",
     "\n",
-    "color_map = 'Blues' #rng_outer.choice(plt.colormaps())\n",
+    "color_map = rng_outer.choice(plt.colormaps()) # choose a color map\n",
     "\n",
-    "plot_style = 'default' #rng_outer.choice(plot_styles)\n",
+    "plot_style = rng_outer.choice(plot_styles) # choose a plotting style\n",
     "\n",
-    "npanels, panel_style, nrows, ncols = 1, 'square', 1, 1 #get_nrows_and_ncols(panel_params, rng=rng_outer)\n",
+    "npanels, panel_style, nrows, ncols = 1, 'square', 1, 1 # keep single image\n",
     "\n",
-    "aspect_fig = 0.9\n",
+    "aspect_fig = rng_outer.uniform(low=aspect_fig_params['min'], high=aspect_fig_params['max'])\n",
     "\n",
-    "dpi =  300 # int(rng_outer.uniform(low=dpi_params['min'], high=dpi_params['max']))"
+    "dpi = int(rng_outer.uniform(low=dpi_params['min'], high=dpi_params['max']))\n",
+    "\n",
+    "print('Color map:', color_map)\n",
+    "print('Plot style:', plot_style)\n",
+    "print('Aspect ratio:', aspect_fig)\n",
+    "print('DPI:', dpi)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "4a4a2738",
    "metadata": {},
    "outputs": [],
@@ -580,39 +645,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28cf8de7",
+   "metadata": {},
+   "source": [
+    "Get distribution based on randomized selection:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a5da3de5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distribution Type: linear\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get distribution type\n",
+    "dist_params = plot_params_out[plot_type]['distribution'] \n",
+    "choices_d = []; probs_d = []\n",
+    "for k,v in dist_params.items():\n",
+    "    choices_d.append(k)\n",
+    "    probs_d.append(v['prob'])\n",
+    "\n",
+    "distribution_type = np.random.choice(choices_d, p=probs_d)\n",
+    "print('Distribution Type:', distribution_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "a83ecfe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xmin, xmax =  -7771.689556398584 3552.629870540735\n"
+     ]
+    }
+   ],
+   "source": [
+    "xmin,xmax = log_scale_ax()\n",
+    "plot_params_out[plot_type]['xmin']=xmin\n",
+    "plot_params_out[plot_type]['xmax']=xmax\n",
+    "print('xmin, xmax = ', xmin, xmax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "06f92482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "success_get_data = False\n",
+    "while not success_get_data:\n",
+    "    data_for_plot = get_data(plot_params_out[plot_type], \n",
+    "                             plot_type=plot_type, distribution=distribution_type, rng=rng)\n",
+    "    if len(data_for_plot['xs']) > 0 and plot_type == 'histogram':\n",
+    "        success_get_data = True"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9e0d13",
+   "id": "f86e9915",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4910eae0",
+   "execution_count": null,
+   "id": "5f868a5d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.str_('histogram')"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4c1c8a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c3b5428",
+   "metadata": {},
    "source": [
-    "choices = []; probs = []\n",
-    "for k,v in plot_params_out.items():\n",
-    "    choices.append(k)\n",
-    "    probs.append(v['prob'])\n",
-    "\n",
-    "plot_type = rng.choice(choices, p=probs)\n",
-    "plot_type"
+    "# ---------- HERE -------"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9e0d13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
