a few more notes

--- a/create_example_hists_complex_jcdl2025.ipynb
+++ b/create_example_hists_complex_jcdl2025.ipynb
@@ -784,20 +784,29 @@
     "fontsize_min = 8 # minimum to try to shrink titles\n",
     "\n",
     "\n",
+    "# flags for various things\n",
     "success_titles = False\n",
+    "redo_gen_fig = True\n",
+    "redo_gen_data = True\n",
+    "\n",
     "# keep titles\n",
     "xlabels_pull = deepcopy(popular_nouns)\n",
     "ylabels_pull = deepcopy(popular_nouns)\n",
     "titles_pull = deepcopy(popular_nouns)\n",
     "while not success_titles: # ensure we catch any errors with bad fonts\n",
     "    try:\n",
-    "        fig, axes, plot_inds = make_base_plot(plot_style, color_map, dpi, nrows, ncols, aspect_fig,\n",
+    "        if redo_gen_fig:\n",
+    "            fig, axes, plot_inds = make_base_plot(plot_style, color_map, dpi, nrows, ncols, aspect_fig,\n",
     "                        base=2, verbose=True, tight_layout = tight_layout)\n",
+    "            redo_gen_fig = False\n",
     "\n",
-    "        #print('here2')\n",
-    "        data_from_plot, ax = make_plot(plot_params_out[plot_type], data_for_plot, \n",
+    "        if redo_gen_data:\n",
+    "            data_from_plot, ax = make_plot(plot_params_out[plot_type], data_for_plot, \n",
     "                                axes[0], plot_type=plot_type, linestyles=linestyles_hist, \n",
     "                                rng=rng)\n",
+    "            redo_gen_data = False\n",
+    "\n",
+    "        # get title and axis words\n",
     "        title, xlabel, ylabel = add_titles_and_labels(axes[0], xlabels_pull, ylabels_pull, titles_pull, \n",
     "                                              title_params, csfont, title_fontsize, \n",
     "                          xlabel_params, ylabel_params, xlabel_fontsize, ylabel_fontsize,\n",
@@ -883,10 +892,10 @@
     "    # x/y axis labels -- make smaller or pull new ones\n",
     "    # title -- make smaller or pull new ones\n",
     "    # square -- might not have to worry about this one? or if flagged, then make smaller the thing (title, etc) ?\n",
-    "    # x/y tick marks -- if x/y tick marks overlap -- try making them smaller, but if continue to overlap, redo whole plot\n",
+    "    # x/y tick marks -- if x/y tick marks overlap -- try making them smaller, but if continue to overlap, redo whole plot -- redo_gen_fig = True & repull fonts\n",
     "\n",
     "    # also check:\n",
-    "    # aspect ratio limits on box size -- maybe do this first before checking anything else since it means we have to redo the plot!"
+    "    # aspect ratio limits on box size -- maybe do this first before checking anything else since it means we have to redo the plot! redo_gen_fig = True"
    ]
   },
   {
